30 April 2018: Wouter
	- Fix spelling error in man page and note defaults as no instead of
	  off.

26 April 2018: Wouter
	- Fix for crash in daemon_cleanup with dnstap during reload,
	  from Saksham Manchanda.
	- Also that for dnscrypt.
	- tag for 1.7.1rc1 release.

25 April 2018: Ralph
	- Fix memory leak when caching wildcard records for aggressive NSEC use

24 April 2018: Wouter
	- Fix contrib/fastrpz.patch for this release.
	- Fix auth https for libev.

24 April 2018: Ralph
	- Added root-key-sentinel support

23 April 2018: Wouter
	- makedist uses bz2 for expat code, instead of tar.gz.
	- Fix #4092: libunbound: use-caps-for-id lacks colon in
	  config_set_option.
	- auth zone http download stores exact copy of downloaded file,
	  including comments in the file.
	- Fix sldns parse failure for CDS alternate delete syntax empty hex.
	- Attempt for auth zone fix; add of callback in mesh gets from
	  callback does not skip callback of result.
	- Fix cname classification with qname minimisation enabled.
	- list_auth_zones unbound-control command.

20 April 2018: Wouter
	- man page documentation for dns-over-tls forward-addr '#' notation.
	- removed free from failed parse case.
	- Fix #4091: Fix that reload of auth-zone does not merge the zonefile
	  with the previous contents.
	- Delete auth zone when removed from config.

19 April 2018: Wouter
	- Can set tls authentication with forward-addr: IP#tls.auth.name
	  And put the public cert bundle in tls-cert-bundle: "ca-bundle.pem".
	  such as forward-addr: 9.9.9.9@853#dns.quad9.net or
	  1.1.1.1@853#cloudflare-dns.com
	- Fix #658: unbound using TLS in a forwarding configuration does not
	  verify the server's certificate (RFC 8310 support).
	- For addr with #authname and no @port notation, the default is 853.

18 April 2018: Wouter
	- Fix auth-zone retry timer to be on schedule with retry timeout,
	  with backoff.  Also time a refresh at the zone expiry.

17 April 2018: Wouter
	- auth zone notify work.